--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>제타시스템 운영팀 웹 어드민 시스템</title>
+  <title>제타시스템 운영팀 웹 어드민 시스템 version 1</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
