--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <h1>운영팀 웹 어드민 시스템</h1>
   <p>Welcome to 운영팀 웹 어드민 시스템 version1 </p>
   <p>운영팀 전화번호 02-777-7777</p>
+  <p> 운영자 : 이효리 </p>
 </body>
+
 
 </html>
